# spire-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  prompt.md
.codex/cross-session-iteractive/: SKILL.md
.codex/cross-session-iteractive/references/: EXAMPLE_TASK_MANIFEST.md
.codex/skills/cross-session-iteractive/: SKILL.md
.github/workflows/: ci.yml
docs/: sandbox_guide.md  spiffe-debug-compare.md  style_markdown.md
issues/: issue-001.md
manifests/: task_impl_fetch_jwt.md  task_impl_healthcheck.md
sandbox/: kind-config.yaml
sandbox/deploy/httpbin/: httpbin.yaml
sandbox/deploy/spire/agent/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  namespace.yaml  serviceaccount.yaml
sandbox/deploy/spire/csi/: clusterrole.yaml  clusterrolebinding.yaml  csidriver.yaml  daemonset.yaml  serviceaccount.yaml
sandbox/deploy/spire/server/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
sandbox/docker/: spiffe-debugger.Dockerfile
sandbox/scripts/: check-spire-server.sh  cluster-up.sh  generate-certs.sh  install-tools.sh
sandbox/scripts/httpbin/: deploy.sh  redeploy.sh  undeploy.sh
sandbox/scripts/registration/: deploy.sh  undeploy.sh
sandbox/scripts/spiffe-debugger/: build.sh
sandbox/scripts/spire-agent/: deploy.sh  undeploy.sh
sandbox/scripts/spire-csi/: deploy.sh  undeploy.sh
sandbox/scripts/spire-server/: deploy.sh  undeploy.sh
sandbox/scripts/utility/: colors.sh
scripts/: codex_cross_session_iterate.sh  codex_prompt_loop.sh
spire-agent/: Cargo.toml
spire-agent-mock/: Cargo.toml  README.md  build.rs
spire-agent-mock/scripts/: start.sh  test.sh
spire-agent-mock/src/: lib.rs  main.rs  server.rs  svid.rs
spire-agent/src/: commands.rs  fetch_jwt.rs  fetch_x509.rs  healthcheck.rs  main.rs
spire-agent/src/rpc/: mod.rs
src/: main.rs
