[package]
name = "spire-agent-mock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spire-agent-mock"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
spiffe = { version = "0.11", features = ["x509"] }
prost = "0.14"
prost-types = "0.14"
tempfile = "3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
clap = { version = "4.5", features = ["derive", "env"] }
rcgen = { version = "0.14", features = ["pem"] }
time = "0.3"
async-stream = "0.3"
tonic-health = "0.14"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
